--- a/index.html
+++ b/index.html
@@ -79,10 +79,7 @@
     <!-- Menu Section -->
     <section id="menu" class="menu">
       <h2><span>Menu</span> kami</h2>
-      <p>
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aut non
-        dolorem quidem
-      </p>
+      <p>Warm Offerings from Our Kitchen</p>
 
       <div class="row">
         <div class="menu-card">
@@ -92,17 +89,27 @@
         </div>
         <div class="menu-card">
           <img src="img/1.jpg" alt="espresso" class="menu-card-img" />
-          <h3 class="menu-card-title">- Espreso -</h3>
+          <h3 class="menu-card-title">- Espresso Romano -</h3>
           <p class="menu-card-price">IDR 15K</p>
         </div>
         <div class="menu-card">
           <img src="img/1.jpg" alt="espresso" class="menu-card-img" />
-          <h3 class="menu-card-title">- Espreso -</h3>
+          <h3 class="menu-card-title">- Traditional Cappuccino -</h3>
           <p class="menu-card-price">IDR 15K</p>
         </div>
         <div class="menu-card">
           <img src="img/1.jpg" alt="espresso" class="menu-card-img" />
-          <h3 class="menu-card-title">- Espreso -</h3>
+          <h3 class="menu-card-title">- Vanilla Latte -</h3>
+          <p class="menu-card-price">IDR 15K</p>
+        </div>
+        <div class="menu-card">
+          <img src="img/1.jpg" alt="espresso" class="menu-card-img" />
+          <h3 class="menu-card-title">- Sweet Mocha -</h3>
+          <p class="menu-card-price">IDR 15K</p>
+        </div>
+        <div class="menu-card">
+          <img src="img/1.jpg" alt="espresso" class="menu-card-img" />
+          <h3 class="menu-card-title">- Caramel Macchiato -</h3>
           <p class="menu-card-price">IDR 15K</p>
         </div>
       </div>
@@ -113,7 +120,8 @@
     <section id="contact" class="contact">
       <h2><span>Contact</span> us</h2>
       <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum, vitae?
+        Feel free to contact us if you have any questions or would like to make
+        a reservation!
       </p>
 
       <div class="row">
@@ -128,15 +136,15 @@
         <form action="">
           <div class="input-grup">
             <i data-feather="user"></i>
-            <input type="text" placeholder="nama" />
+            <input type="text" placeholder="Name" />
           </div>
           <div class="input-grup">
             <i data-feather="mail"></i>
-            <input type="text" placeholder="email" />
+            <input type="text" placeholder="Email" />
           </div>
           <div class="input-grup">
             <i data-feather="phone"></i>
-            <input type="text" placeholder="no hp" />
+            <input type="text" placeholder="Handphone" />
           </div>
           <button type="submit" class="btn">send message</button>
         </form>
