--- a/index.html
+++ b/index.html
@@ -118,12 +118,21 @@
 
     <!-- contact section -->
     <section id="contact" class="contact">
-      <h2><span>Contact</span> us</h2>
+      <div
+        class="visme_d"
+        data-title="Untitled Project"
+        data-url="epr0q9zr-untitled-project"
+        data-domain="forms"
+        data-full-page="false"
+        data-min-height="500px"
+        data-form-id="48782"
+      ></div>
+      <script src="https://static-bundles.visme.co/forms/vismeforms-embed.js"></script>
+      <!-- <h2><span>Contact</span> us</h2>
       <p>
         Feel free to contact us if you have any questions or would like to make
         a reservation!
       </p>
-
       <div class="row">
         <iframe
           src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d253840.65639022697!2d106.66470106402271!3d-6.229379586946628!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e69f3e945e34b9d%3A0x5371bf0fdad786a2!2sJakarta%2C%20Daerah%20Khusus%20Ibukota%20Jakarta!5e0!3m2!1sid!2sid!4v1710926259326!5m2!1sid!2sid"
@@ -148,7 +157,7 @@
           </div>
           <button type="submit" class="btn">send message</button>
         </form>
-      </div>
+      </div> -->
     </section>
     <!-- contact section end -->
 
