--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
       <a href="#" class="navbar-logo">Welcome to <span>Coffee Shop</span></a>
       <div class="navbar-nav">
         <a href="#home">Home</a>
-        <a href="#about">About</a>
-        <a href="#menu">Menu</a>
-        <a href="#contact">Contact</a>
+        <a href="#about">Tentang Kami</a>
+        <a href="#menu">Menu Kami</a>
+        <a href="#contact">Kontak Kami</a>
       </div>
 
       <div class="navbar-extra">
@@ -46,9 +46,15 @@
     <section class="hero" id="home">
       <main class="content">
         <h1>Start your day with<span> a Cup of Coffee</span></h1>
-        <p>We provide high quality coffee, freshly made.</p>
+        <p>
+          We provide high quality coffee, freshly made.
+        </p>
+
+        <p>
+          Always try the best way to serve our customers. We provide the best coffee. Can 100% trusted by our customers.
+        </p>
         <button type="button" class="cta" onclick="location.href='#menu'">
-          Explore Menu
+          Menu Kami
         </button>
         <!-- <a href="#menu" class="cta">Explore Menu</a> -->
       </main>
@@ -57,7 +63,7 @@
 
     <!-- About Section -->
     <section id="about" class="about">
-      <h2 class="section-title"><span>About </span>Us</h2>
+      <h2 class="section-title"><span>Tentang </span>Kami</h2>
 
       <div class="row">
         <div class="about-img">
@@ -128,7 +134,7 @@
         data-form-id="48782"
       ></div>
       <script src="https://static-bundles.visme.co/forms/vismeforms-embed.js"></script>
-      <!-- <h2><span>Contact</span> us</h2>
+      <!-- <h2><span>Kontak </span>Kami</h2>
       <p>
         Feel free to contact us if you have any questions or would like to make
         a reservation!
@@ -171,9 +177,9 @@
 
       <div class="links">
         <a href="#home">Home</a>
-        <a href="#about">About</a>
-        <a href="#menu">Menu</a>
-        <a href="#contact">Contact</a>
+        <a href="#about">Tentang Kami</a>
+        <a href="#menu">Menu Kami</a>
+        <a href="#contact">Kontak Kami</a>
       </div>
 
       <div class="credit">
