--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
       <div class="row">
         <div class="menu-card">
           <img src="img/1.jpg" alt="espresso" class="menu-card-img" />
-          <h3 class="menu-card-title">- Espreso -</h3>
+          <h3 class="menu-card-title">- Black Coffee -</h3>
           <p class="menu-card-price">IDR 15K</p>
         </div>
         <div class="menu-card">
