--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>coffee - Shop</title>
+    <title>BrandName</title>
 
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -23,15 +23,18 @@
   <body>
     <!-- Navbar -->
     <nav class="navbar">
-      <a href="#" class="navbar-logo">Welcome to <span>Coffee Shop</span></a>
+      <a href="" class="navbar-logo">Brand <span>Name</span></a>
       <div class="navbar-nav">
         <a href="#home">Home</a>
-        <a href="#about">Tentang Kami</a>
-        <a href="#menu">Menu Kami</a>
-        <a href="#contact">Kontak Kami</a>
+        <a href="#about">About Us</a>
+        <a href="#menu">Menu</a>
+        <a href="#contact">Contact Us</a>
       </div>
 
       <div class="navbar-extra">
+        <a href="#" id="user-button">
+          <is data-feather="user"></is>
+        </a>
         <a href="#" id="shopping-cart-button">
           <is data-feather="shopping-cart"></is>
         </a>
@@ -42,19 +45,40 @@
     </nav>
     <!-- End Navbar -->
 
+    <!-- Login Form Start -->
+    <div class="modal" id="show-login-form">
+      <div class="login-container">
+        <a href="" class="close-icon"><i data-feather="x"></i></a>
+        <div class="login-content">
+          <h3>Login Here</h3>
+          <label for="Username">Email</label>
+          <input type="text" name="" placeholder="Enter Your Email" id="" />
+          <label for="password">Password</label>
+          <input
+            type="password"
+            name=""
+            placeholder="Enter Your password"
+            id=""
+          />
+          <button>Login</button>
+          <button>Sing Up</button>
+        </div>
+      </div>
+    </div>
+    <!-- Login Form End -->
+
     <!-- Hero Section -->
     <section class="hero" id="home">
       <main class="content">
         <h1>Start your day with<span> a Cup of Coffee</span></h1>
-        <p>
-          We provide high quality coffee, freshly made.
-        </p>
+        <p>We provide high quality coffee, freshly made.</p>
 
         <p>
-          Always try the best way to serve our customers. We provide the best coffee. Can 100% trusted by our customers.
+          Always try the best way to serve our customers. We provide the best
+          coffee. Can 100% trusted by our customers.
         </p>
         <button type="button" class="cta" onclick="location.href='#menu'">
-          Menu Kami
+          Shop Now
         </button>
         <!-- <a href="#menu" class="cta">Explore Menu</a> -->
       </main>
@@ -63,20 +87,22 @@
 
     <!-- About Section -->
     <section id="about" class="about">
-      <h2 class="section-title"><span>Tentang </span>Kami</h2>
+      <div class="about-container">
+        <h2 class="section-title"><span>About </span>Us</h2>
 
-      <div class="row">
-        <div class="about-img">
-          <img src="img/about-us.jpg" alt="About" />
-        </div>
+        <div class="row">
+          <div class="about-img">
+            <img src="img/about-us.jpg" alt="About" />
+          </div>
 
-        <div class="content">
-          <h3>What makes our coffee special?</h3>
-          <p>
-            We provide high quality coffee, freshly made. complicated proscesses
-            are involved in the production of coffee. until we can serve it to
-            others.
-          </p>
+          <div class="content">
+            <h3>What makes our coffee special?</h3>
+            <p>
+              We provide high quality coffee, freshly made. complicated
+              proscesses are involved in the production of coffee. until we can
+              serve it to others.
+            </p>
+          </div>
         </div>
       </div>
     </section>
@@ -84,44 +110,80 @@
 
     <!-- Menu Section -->
     <section id="menu" class="menu">
-      <h2><span>Menu</span> kami</h2>
-      <p>Warm Offerings from Our Kitchen</p>
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+        <path
+          fill="#514438"
+          fill-opacity="1"
+          d="M0,224L80,192C160,160,320,96,480,96C640,96,800,160,960,170.7C1120,181,1280,139,1360,117.3L1440,96L1440,0L1360,0C1280,0,1120,0,960,0C800,0,640,0,480,0C320,0,160,0,80,0L0,0Z"
+        ></path>
+      </svg>
 
-      <div class="row">
-        <div class="menu-card">
-          <img src="img/1.jpg" alt="espresso" class="menu-card-img" />
-          <h3 class="menu-card-title">- Espreso -</h3>
-          <p class="menu-card-price">IDR 15K</p>
-        </div>
-        <div class="menu-card">
-          <img src="img/1.jpg" alt="espresso" class="menu-card-img" />
-          <h3 class="menu-card-title">- Espresso Romano -</h3>
-          <p class="menu-card-price">IDR 15K</p>
-        </div>
-        <div class="menu-card">
-          <img src="img/1.jpg" alt="espresso" class="menu-card-img" />
-          <h3 class="menu-card-title">- Traditional Cappuccino -</h3>
-          <p class="menu-card-price">IDR 15K</p>
-        </div>
-        <div class="menu-card">
-          <img src="img/1.jpg" alt="espresso" class="menu-card-img" />
-          <h3 class="menu-card-title">- Vanilla Latte -</h3>
-          <p class="menu-card-price">IDR 15K</p>
-        </div>
-        <div class="menu-card">
-          <img src="img/1.jpg" alt="espresso" class="menu-card-img" />
-          <h3 class="menu-card-title">- Sweet Mocha -</h3>
-          <p class="menu-card-price">IDR 15K</p>
-        </div>
-        <div class="menu-card">
-          <img src="img/1.jpg" alt="espresso" class="menu-card-img" />
-          <h3 class="menu-card-title">- Caramel Macchiato -</h3>
-          <p class="menu-card-price">IDR 15K</p>
+      <div class="menu-container">
+        <h2><span>Our</span> Menu</h2>
+        <p>Warm Offerings from Our Kitchen</p>
+
+        <div class="row">
+          <div class="menu-card">
+            <img src="img/espresso.jpg" alt="espresso" class="menu-card-img" />
+            <h3 class="menu-card-title">- Espreso -</h3>
+            <p class="menu-card-price">IDR 15K</p>
+          </div>
+          <div class="menu-card">
+            <img
+              src="img/Espresso-Romano.jpg"
+              alt="Espresso-Romano"
+              class="menu-card-img"
+            />
+            <h3 class="menu-card-title">- Espresso Romano -</h3>
+            <p class="menu-card-price">IDR 18K</p>
+          </div>
+          <div class="menu-card">
+            <img
+              src="img/cappuccino.jpg"
+              alt="Traditional Cappuccino"
+              class="menu-card-img"
+            />
+            <h3 class="menu-card-title">- Traditional Cappuccino -</h3>
+            <p class="menu-card-price">IDR 25K</p>
+          </div>
+          <div class="menu-card">
+            <img
+              src="img/vanilla-latte.jpg"
+              alt="Vanilla Latte"
+              class="menu-card-img"
+            />
+            <h3 class="menu-card-title">- Vanilla Latte -</h3>
+            <p class="menu-card-price">IDR 22K</p>
+          </div>
+          <div class="menu-card">
+            <img
+              src="img/Sweet-Mocha.jpg"
+              alt="Sweet Mocha"
+              class="menu-card-img"
+            />
+            <h3 class="menu-card-title">- Sweet Mocha -</h3>
+            <p class="menu-card-price">IDR 20K</p>
+          </div>
+          <div class="menu-card">
+            <img
+              src="img/caramel.jpg"
+              alt="Caramel Macchiato"
+              class="menu-card-img"
+            />
+            <h3 class="menu-card-title">- Caramel Macchiato -</h3>
+            <p class="menu-card-price">IDR 21K</p>
+          </div>
         </div>
       </div>
     </section>
     <!-- End Menu Section -->
-
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+      <path
+        fill="#010101"
+        fill-opacity="1"
+        d="M0,224L80,192C160,160,320,96,480,96C640,96,800,160,960,170.7C1120,181,1280,139,1360,117.3L1440,96L1440,0L1360,0C1280,0,1120,0,960,0C800,0,640,0,480,0C320,0,160,0,80,0L0,0Z"
+      ></path>
+    </svg>
     <!-- contact section -->
     <section id="contact" class="contact">
       <div
@@ -177,9 +239,9 @@
 
       <div class="links">
         <a href="#home">Home</a>
-        <a href="#about">Tentang Kami</a>
-        <a href="#menu">Menu Kami</a>
-        <a href="#contact">Kontak Kami</a>
+        <a href="#about">About Us</a>
+        <a href="#menu">Menu</a>
+        <a href="#contact">Contact Us</a>
       </div>
 
       <div class="credit">
