--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" href="img/icon.jpg" />
     <title>coffee - Shop</title>
 
     <!-- Fonts -->
@@ -45,18 +46,17 @@
     <!-- Hero Section -->
     <section class="hero" id="home">
       <main class="content">
-        <h1>Start your day with<span> a Cup of Coffee</span></h1>
+        <h1>Start day with <span> Cup of Coffee</span></h1>
         <p>
           We provide high quality coffee, freshly made.
         </p>
 
         <p>
-          Always try the best way to serve our customers. We provide the best coffee. Can 100% trusted by our customers.
+          Always try the best way to serve our customers. We provide the best coffee 100% trusted.
         </p>
         <button type="button" class="cta" onclick="location.href='#menu'">
           Menu Kami
         </button>
-        <!-- <a href="#menu" class="cta">Explore Menu</a> -->
       </main>
     </section>
     <!-- End Hero Section -->
@@ -73,9 +73,9 @@
         <div class="content">
           <h3>What makes our coffee special?</h3>
           <p>
-            We provide high quality coffee, freshly made. complicated proscesses
-            are involved in the production of coffee. until we can serve it to
-            others.
+            Freshly with selected coffee beans. complicated proscesses
+            are involved in the production of coffee. 
+            Until we can serve it to others.
           </p>
         </div>
       </div>
@@ -85,38 +85,38 @@
     <!-- Menu Section -->
     <section id="menu" class="menu">
       <h2><span>Menu</span> kami</h2>
-      <p>Warm Offerings from Our Kitchen</p>
+      <p>We provide high quality coffee, freshly made.</p>
 
       <div class="row">
         <div class="menu-card">
           <img src="img/1.jpg" alt="espresso" class="menu-card-img" />
           <h3 class="menu-card-title">- Black Coffee -</h3>
-          <p class="menu-card-price">IDR 15K</p>
+          <p class="menu-card-price">Rp 30.000</p>
         </div>
         <div class="menu-card">
           <img src="img/1.jpg" alt="espresso" class="menu-card-img" />
-          <h3 class="menu-card-title">- Espresso Romano -</h3>
-          <p class="menu-card-price">IDR 15K</p>
+          <h3 class="menu-card-title">- Pure Espresso -</h3>
+          <p class="menu-card-price">Rp 27.000</p>
         </div>
         <div class="menu-card">
           <img src="img/1.jpg" alt="espresso" class="menu-card-img" />
-          <h3 class="menu-card-title">- Traditional Cappuccino -</h3>
-          <p class="menu-card-price">IDR 15K</p>
+          <h3 class="menu-card-title">- Traditional Cappucino -</h3>
+          <p class="menu-card-price">Rp 25.000</p>
         </div>
         <div class="menu-card">
           <img src="img/1.jpg" alt="espresso" class="menu-card-img" />
           <h3 class="menu-card-title">- Vanilla Latte -</h3>
-          <p class="menu-card-price">IDR 15K</p>
+          <p class="menu-card-price">Rp 15.000</p>
         </div>
         <div class="menu-card">
           <img src="img/1.jpg" alt="espresso" class="menu-card-img" />
           <h3 class="menu-card-title">- Sweet Mocha -</h3>
-          <p class="menu-card-price">IDR 15K</p>
+          <p class="menu-card-price">Rp 20.000</p>
         </div>
         <div class="menu-card">
           <img src="img/1.jpg" alt="espresso" class="menu-card-img" />
           <h3 class="menu-card-title">- Caramel Macchiato -</h3>
-          <p class="menu-card-price">IDR 15K</p>
+          <p class="menu-card-price">Rp 20.000</p>
         </div>
       </div>
     </section>
@@ -183,7 +183,7 @@
       </div>
 
       <div class="credit">
-        <p>Created by <a href="">TK HariSenin </a>| &copy; 2024.</p>
+        <p>Created by | <a href="https://www.harisenin.com/">Kelompok 4 HariSenin Bootcamp </a>| &copy; 2024.</p>
       </div>
     </footer>
     <!-- footer end -->
