--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
     <!-- Menu Section -->
     <section id="menu" class="menu">
-      <h2><span>Menu</span> kami</h2>
+      <h2><span>My</span> Menu</h2>
       <p>Warm Offerings from Our Kitchen</p>
 
       <div class="row">
@@ -118,7 +118,7 @@
 
     <!-- contact section -->
     <section id="contact" class="contact">
-      <div
+      <!-- <div
         class="visme_d"
         data-title="Untitled Project"
         data-url="epr0q9zr-untitled-project"
@@ -127,8 +127,8 @@
         data-min-height="500px"
         data-form-id="48782"
       ></div>
-      <script src="https://static-bundles.visme.co/forms/vismeforms-embed.js"></script>
-      <!-- <h2><span>Contact</span> us</h2>
+      <script src="https://static-bundles.visme.co/forms/vismeforms-embed.js"></script> -->
+      <h2><span>Contact</span> us</h2>
       <p>
         Feel free to contact us if you have any questions or would like to make
         a reservation!
@@ -157,7 +157,7 @@
           </div>
           <button type="submit" class="btn">send message</button>
         </form>
-      </div> -->
+      </div>
     </section>
     <!-- contact section end -->
 
