--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
 
     <!-- contact section -->
     <section id="contact" class="contact">
-      <div
+      <!-- <div
         class="visme_d"
         data-title="Untitled Project"
         data-url="epr0q9zr-untitled-project"
@@ -208,9 +208,9 @@
         data-form-id="48782"
       ></div>
 
-      <script src="https://static-bundles.visme.co/forms/vismeforms-embed.js"></script>
+      <script src="https://static-bundles.visme.co/forms/vismeforms-embed.js"></script> -->
 
-      <!-- <h2><span>Kontak </span>Kami</h2>
+      <h2><span>Kontak </span>Kami</h2>
       <p>
         Feel free to contact us if you have any questions or would like to make
         a reservation!
@@ -239,7 +239,7 @@
           </div>
           <button type="submit" class="btn">send message</button>
         </form>
-      </div> -->
+      </div>
     </section>
     <!-- contact section end -->
 
