--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
     <!-- Navbar -->
     <nav class="navbar">
-      <a href="" class="navbar-logo">Welcome to Coffee <span>House</span></a>
+      <a href="" class="navbar-logo">Coffee<span>House</span></a>
       <div class="navbar-nav">
         <a href="#home">Home</a>
         <a href="#about">About Us</a>
