--- a/index.html
+++ b/index.html
@@ -59,6 +59,12 @@
           <label for="Username">Email</label>
           <input type="text" name="" placeholder="Enter Your Email" id="" />
           <label for="password">Password</label>
+          <input
+            type="password"
+            name=""
+            placeholder="Enter Your password"
+            id=""
+          />
           <label for="repeat-password">Repeat Your Password</label>
           <input
             type="password"
