--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
     <!-- Navbar -->
     <nav class="navbar">
-      <a href="" class="navbar-logo">Coffee<span>House</span></a>
+      <a href="" class="navbar-logo">Coffee <span>House</span></a>
       <div class="navbar-nav">
         <a href="#home">Home</a>
         <a href="#about">About Us</a>
@@ -79,11 +79,7 @@
         <h1>Start Day with<span> Cup of Coffee</span></h1>
 
         <p>
-          We provide high quality coffee,
-        </p>
-        
-        <p>
-          Always try the best way to serve our customers. We provide the best coffee 100% trusted.
+          We provide high quality coffee.
         </p>
 
         <button type="button" class="cta" onclick="location.href='#menu'">
